added the app to the admin + link in template to enter a card manually

--- a/rucheweb/requirements.txt
+++ b/rucheweb/requirements.txt
@@ -2,8 +2,9 @@ django==1.5
 django-bootstrap3
 pyjade
 south
-django-grappelli==2.4.8
+django-grappelli==2.4.8  # for django 1.5
 
 # web scrapers:
 requests
 beautifulsoup4
+ipdb
