discogs - fix (most of) release thumbnails, tests, cache
discogs apparently changed their api at the beginnig of march and we
were not able any more to get the albums thumbnails without an Oauth
authentication (as they explain in their doc). This patch includes
tests to reproduce the issue and a new method to get (most of) the thumbnails
from a different (discogs) source.

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -1,13 +1,14 @@
 django==1.5
 django-bootstrap3
-pyjade                   # process jade templates
-south                    # schema migration
-django-grappelli==2.4.8  # for django 1.5.
+pyjade                  # process jade templates
+south                   # schema migration
+django-grappelli==2.4.8 # for django 1.5.
 
-# testing
+### testing
 mock==1.0.1
 
-# web scrapers:
+### web scrapers:
 requests
+requests_cache          # set up a cache in 2 loc
 beautifulsoup4
 ipdb
