--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -1,8 +1,8 @@
-django==1.5
+django==1.6
 django-bootstrap3
 pyjade                  # process jade templates
 south                   # schema migration
-django-grappelli==2.4.8 # for django 1.5.
+django-grappelli==2.5.1
 django_extensions==1.3.3# more useful commands to manage.py (shell_plus)
 
 ### testing
