--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -3,13 +3,17 @@ django-bootstrap3
 pyjade                  # process jade templates
 south                   # schema migration
 django-grappelli==2.5.1
-django_extensions==1.3.3# more useful commands to manage.py (shell_plus)
 
 ### testing
 mock==1.0.1
 ipdb
+coverage==3.7.1
 
 ### web scrapers:
 requests
 requests_cache          # set up a cache in 2 loc
 beautifulsoup4
+
+### Django extensions
+django_extensions==1.3.3# more useful commands to manage.py (shell_plus)
+Werkzeug                # runserver_plus: richer tracebacks and inline console
