--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -1,4 +1,5 @@
 django==1.6
+django-bootstrap3
 pyjade                  # process jade templates
 south                   # schema migration
 bootstrap-admin         # bootstrap theme, nice search feature
