--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -17,3 +17,4 @@ beautifulsoup4
 ### Django extensions
 django_extensions==1.3.3# more useful commands to manage.py (shell_plus)
 Werkzeug                # runserver_plus: richer tracebacks and inline console
+django-autocomplete-light # ajax autocompletion without writing javascript
