--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -8,6 +8,7 @@ bootstrap-admin         # bootstrap theme, nice search feature
 mock==1.0.1
 ipdb
 coverage==3.7.1
+nose==1.3.1             # friendly test runner
 
 ### web scrapers:
 requests
@@ -18,3 +19,6 @@ beautifulsoup4
 django_extensions==1.3.3# more useful commands to manage.py (shell_plus)
 Werkzeug                # runserver_plus: richer tracebacks and inline console
 django-autocomplete-light # ajax autocompletion without writing javascript
+
+### utils
+toolz                   # pure, lazy, composable functional programming
