jquery: install with bower and load first.
it is needed by autocomplete_light and django_bootstrap.

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
         "angular-sanitize": "latest",
         "angular-ui-router": "latest",
         "bootstrap": "3.3",
-        "font-awesome": "latest"
+        "jquery"   : "~1.9"
     },
     "description": "abelujo",
     "ignore": [
