--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "angularjs": "1.3",
+        "angularjs": "1.2",
+        "angular-bootstrap": "0.11.2",
         "angular-cookies": "latest",
         "angular-mocks": "latest",
         "angular-resource": "latest",
