--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "description": "abelujo",
     "devDependencies": {
         "bower": "~1.3.1",
+        "rapydscript": "latest",
         "gulp": "~3.6.2",
         "gulp-bg": "0.0.5",
         "gulp-concat": "~2.2.0",
@@ -20,7 +21,7 @@
     "name": "abelujo",
     "private": true,
     "scripts": {
-        "postinstall": "bower install",
+        "postinstall": "npm install git+https://gitlab.com/vindarel/gulp-rapyd.git ; bower install",
         "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
     },
     "version": "0.0.0"
