--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -21,6 +21,7 @@ bootstrap-admin         # bootstrap theme, nice search feature.
 ### testing
 mock==1.0.1
 ipdb
+prompt_toolkit          # gives ptipython, most awesome repl.
 coverage==3.7.1
 nose==1.3.1             # friendly test runner.
 factory_boy             # quick and easy test fixtures.
