--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -42,3 +42,4 @@ django-angular            # utilities to integrate django and angular
 ### utils
 toolz                   # pure, lazy, composable functional programming.
 sphinx==1.2.3           # documentation system.
+tabulate                # pretty print tabular data.
