see a search result as text.
todo: change utils.ppcard to deal with list of dicts, not objects,
retrieved from the session.

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -43,3 +43,4 @@ django-angular            # utilities to integrate django and angular
 toolz                   # pure, lazy, composable functional programming.
 sphinx==1.2.3           # documentation system.
 tabulate                # pretty print tabular data.
+addict                  # dotted notation to dict attributes and more.
