--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -26,6 +26,7 @@ prompt_toolkit          # gives ptipython, most awesome repl.
 coverage==3.7.1
 nose==1.3.1             # friendly test runner.
 factory_boy             # quick and easy test fixtures.
+tox==1.9                # test in a fresh venv, against multiple python versions.
 
 ### web scrapers:
 requests
