--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "description": "abelujo",
+    "comment": "These are local dependencies. Run them like this: ./node_modules/.bin/protractor. selenium-webdriver is required to access the 'wedriver' object in a protractor test. It is tempting to install modules (like protractor) globally but don't do it, it creates permission problems with dependencies like the webdriver. Exception for rapydscript... it's easier to interact with our editor.",
     "devDependencies": {
         "bower": "~1.3.1",
         "rapydscript": "latest",
@@ -15,7 +16,8 @@
         "karma": "~0.10",
         "karma-phantomjs-launcher": "~0.1",
         "phantomjs": "~1.9",
-        "protractor": "~0.17.0",
+        "protractor": "~2.0",
+        "selenium-webdriver": "~2.45",
         "shelljs": "~0.2.6",
         "yargs": "1.2.1"
     },
