--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gulp-jshint": "~1.5.5",
         "gulp-karma": "~0.0.4",
         "gulp-less": "~1.2.3",
+        "gulp-minify-css": "~1.2",
         "gulp-uglify": "~0.2.1",
         "gulp-util": "~3.0",
         "http-server": "~0.6.1",
