--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -50,3 +50,5 @@ sphinx==1.2.3           # documentation system.
 tabulate                # pretty print tabular data.
 addict                  # dotted notation to dict attributes and more.
 unidecode               # ASCII transliteration of unicode text.
+distance                # between two strings.
+clize                   # build command line arguments
