--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -52,3 +52,7 @@ addict                  # dotted notation to dict attributes and more.
 unidecode               # ASCII transliteration of unicode text.
 distance                # between two strings.
 clize                   # build command line arguments
+
+# deployment
+underwear
+fabric
