--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -23,7 +23,7 @@ psycopg2                # postgresql database engine.
 ### testing
 mock==1.0.1
 ipdb
-prompt_toolkit          # gives ptipython, most awesome repl.
+ptpython                # gives ptipython with command shell_plus, most awesome repl.
 coverage==3.7.1
 nose==1.3.1             # friendly test runner.
 factory_boy             # quick and easy test fixtures.
@@ -36,7 +36,7 @@ beautifulsoup4          # html parser
 lxml                    # html parser (like beautifulsoup4, but for xpath)
 
 ### Django extensions
-django_extensions==1.3.3  # more useful commands to manage.py (shell_plus).
+django_extensions==1.5    # more useful commands to manage.py (shell_plus).
 Werkzeug                  # runserver_plus: richer tracebacks and inline console.
 django-autocomplete-light # ajax autocompletion without writing javascript.
 django-angular            # utilities to integrate django and angular
