Gunicorn prod server

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -57,3 +57,4 @@ clize                   # build command line arguments
 underwear
 fabric
 whitenoise              # serve static files. Easily, efficiently.
+gunicorn                # wsgi server
