--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "protractor": "~2.0",
         "selenium-webdriver": "~2.45",
         "shelljs": "~0.2.6",
-        "yargs": "1.2.1"
+        "yargs": "1.2.1",
+        "livescript": "latest",
+        "gulp-ls": "~2.4"
     },
     "name": "abelujo",
     "private": true,
