--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
         "bootstrap": "3.3",
         "jquery"   : "~1.9",
         "underscore": "latest",
+        "prelude-ls": "1.1.2",
         "datejs": "latest"
     },
 
