add angular-ui-select to project

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
         "angular-route": "latest",
         "angular-sanitize": "latest",
         "angular-ui-router": "latest",
+        "angular-ui-select": "*",
         "bootstrap": "3.3",
         "jquery"   : "~1.9",
         "underscore": "latest",
