--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -19,6 +19,7 @@ pyjade                  # process jade templates.
 bootstrap-admin         # bootstrap theme, nice search feature.
 pyyaml
 psycopg2                # postgresql database engine.
+pytz			# timezone
 
 ### testing
 mock==1.0.1
