Install c3.js, a graph library

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
         "jquery"   : "~1.9",
         "underscore": "latest",
         "prelude-ls": "1.1.2",
-        "datejs": "latest"
+        "datejs": "latest",
+        "c3": "latest"
     },
 
     "description": "abelujo",
