--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
         "underscore": "latest",
         "prelude-ls": "1.1.2",
         "datejs": "latest",
-        "c3": "latest"
+        "c3": "latest",
+        "angular-smart-table": "2.1"
     },
 
     "description": "abelujo",
