--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
     "dependencies": {
         "angularjs": "1.3",
+        "angular-cookies": "1.3",
         "angular-bootstrap": "0.11.2",
-        "angular-cookies": "latest",
         "angular-mocks": "latest",
         "angular-resource": "latest",
         "angular-route": "latest",
