--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
         "angular-ui-select": "*",
         "bootstrap": "3.3",
         "jquery"   : "~1.9",
+        "underscore": "latest",
         "prelude-ls": "1.1.2",
         "datejs": "latest",
         "c3": "latest",
