--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -31,7 +31,7 @@ factory_boy             # quick and easy test fixtures.
 tox==1.9                # test in a fresh venv, against multiple python versions.
 
 ### web scrapers:
-requests
+requests==2.7           # http calls
 requests_cache          # set up a cache in 2 loc
 beautifulsoup4          # html parser
 lxml                    # html parser (like beautifulsoup4, but for xpath)
