--- a/search/datasources/Makefile
+++ b/search/datasources/Makefile
@@ -1,13 +1,15 @@
-
-
-install: pip npm
-
 pip:
 	pip install -r requirements.txt
 
 npm:
 	npm install
 
-testscrapers:
+install: pip npm
+
+decitre:
+	@cd frFR/decitre/ && python test_end2end.py
+
+casadellibro:
 	@cd esES/casadellibro/ && python test_end2end.py
-	@echo "tested casadellibro"
+
+testscrapers: decitre casadellibro
