(minor) deps: pin lxml version to 3.5

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -34,7 +34,7 @@ tox==1.9                # test in a fresh venv, against multiple python versions
 requests==2.7           # http calls
 requests_cache          # set up a cache in 2 loc
 beautifulsoup4          # html parser
-lxml                    # html parser (like beautifulsoup4, but for xpath)
+lxml==3.5               # html parser (like beautifulsoup4, but for xpath)
 
 ### Django extensions
 django_extensions==1.5    # more useful commands to manage.py (shell_plus).
