datasource: basic test for librairiedeparis

--- a/search/datasources/Makefile
+++ b/search/datasources/Makefile
@@ -9,7 +9,10 @@ install: pip npm
 decitre:
 	@cd frFR/decitre/ && python test_end2end.py
 
+librairiedeparis:
+	@cd frFR/librairiedeparis/ && python test_end2end.py
+
 casadellibro:
 	@cd esES/casadellibro/ && python test_end2end.py
 
-testscrapers: decitre casadellibro
+testscrapers: decitre casadellibro librairiedeparis
