--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
         "angular-mocks": "latest",
         "angular-resource": "latest",
         "angular-route": "latest",
+        "angular-animate": "1.3",
         "angular-sanitize": "latest",
         "angular-ui-router": "latest",
         "angular-ui-select": "*",
