submodule: get with https, without ssh auth

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "search/datasources"]
 	path = search/datasources
-	url = git@gitlab.com:vindarel/bookshops.git
+	url = https://gitlab.com/vindarel/bookshops.git
