Keyboard shortcut: use 'd' to hide or show cards details (in collection atm)

--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
         "c3": "latest",
         "angular-smart-table": "2.1",
         "angular-loading-bar": "0.8",
-        "angular-datatables": "0.5"
+        "angular-datatables": "0.5",
+        "angular-hotkeys": "chieffancypants/angular-hotkeys#1.7.0"
     },
 
     "description": "abelujo",
