--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -39,6 +39,7 @@ termcolor               # colorful terminal output
 xhtml2pdf               # produce pdf from html templates. Installs
                         # Reportlab, Pypdf2 and Pillow, i.e. big dependencies.
 isbnlib<4               # isbn utils
+unicodecsv<0.15         # at last unicode support to read and write csv files. Lacking in the standard library.
 
 # deployment
 whitenoise              # serve static files. Easily, efficiently.
