--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
         "angular-route": "latest",
         "angular-animate": "1.3",
         "angular-sanitize": "latest",
+        "angular-i18n": "1.3",
+        "angular-dynamic-locale": "0.1.32",
         "angular-ui-router": "latest",
         "angular-ui-select": "*",
         "bootstrap": "3.3",
