--- a/abelujo/requirements-dev.txt
+++ b/abelujo/requirements-dev.txt
@@ -1,5 +1,9 @@
 ### packages only needed for local development, not used on production.
 
+### Django extensions
+django_extensions==1.5    # more useful commands to manage.py (shell_plus).
+Werkzeug                  # runserver_plus: richer tracebacks and inline console.
+
 ### testing
 mock==1.0.1
 ipdb
