Inventories: apply asynchronously
Fixes #36 - Applying an inventory may last too long. Queue it with
Django-q

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -42,3 +42,6 @@ xhtml2pdf==0.0.6        # quickfix... see requirements-system.txt
 # deployment
 whitenoise              # serve static files. Easily, efficiently.
 gunicorn==19.4          # wsgi server
+
+huey==1.2               # task queue
+redis==2.10
