--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -22,6 +22,7 @@ psycopg2                # postgresql database engine.
 pytz			# timezone
 
 ### Django extensions
+djangorestframework==3.4 # REST framework. Serve API, serialize models, explore schema, etc
 django_extensions==1.7    # more useful commands to manage.py (shell_plus).
 mod_wsgi==4.4             # apache server for development.
 # mod_wsgi-httpd           # discard the system's apache httpd server if needed.
@@ -46,3 +47,4 @@ gunicorn==19.4          # wsgi server
 
 huey==1.2               # task queue
 redis==2.10
+
