--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 
     "devDependencies": {
         "protractor": "~4.0",
-        "selenium-webdriver": "~3.0"
+        "selenium-webdriver": "~3.0",
+        "testcafe": "latest",
     },
 
     "private": true,
