--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -38,7 +38,7 @@ tqdm                    # progress bar
 termcolor               # colorful terminal output
 isbnlib<4               # isbn utils
 unicodecsv<0.15         # at last unicode support to read and write csv files. Lacking in the standard library.
-WeasyPrint
+WeasyPrint==0.34 # upgrade cffi ?
 pybarcode
 pillow                  # needs libfreetype6-dev installed
 dateparser==0.5         # parser for human readable dates
