--- a/abelujo/requirements-dev.txt
+++ b/abelujo/requirements-dev.txt
@@ -14,6 +14,7 @@ tox==1.9                # test in a fresh venv, against multiple python versions
 
 ### utils
 sphinx==1.2.3           # documentation system.
+flake8                  # linter
 
 ### packaging
 git+https://github.com/mitsuhiko/platter # package builder # not in pypi yet
