--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "angularjs": "1.3",
+        "angularjs": "1.3.20",
         "angular-cookies": "1.3",
         "angular-bootstrap": "0.14.3",
         "angular-mocks": "latest",
@@ -13,7 +13,7 @@
         "angular-ui-router": "latest",
         "angular-ui-select": "*",
         "bootstrap": "3.3",
-        "jquery"   : "~1.9",
+        "jquery"   : "3.1.1",
         "underscore": "latest",
         "prelude-ls": "1.1.2",
         "datejs": "latest",
@@ -21,6 +21,7 @@
         "angular-smart-table": "2.1",
         "angular-loading-bar": "0.8",
         "angular-datatables": "0.5",
+        "datatables": "1.10.10",
         "angular-hotkeys": "chieffancypants/angular-hotkeys#1.7.0"
     },
 
