A guided tour in the Commands page
looks like it needs two clicks to fire.

for #57 - Add intro guided tours

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
         "angular-ui-router": "latest",
         "angular-ui-select": "*",
         "bootstrap": "3.3",
+        "bootstrap-tour": "0.11",
         "jquery"   : "3.1.1",
         "underscore": "latest",
         "prelude-ls": "1.1.2",
