--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ before_script:
   - make install
 
 install:
-  only:
-    - triggers
+  # only:
+  #   - triggers
   script:
     - make debian
     - source venv_create.sh
