--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,12 @@
 
 image: python:2.7
 
-before_script:
-  - make debian
-  - make install
-
 install:
   # only:
   #   - triggers
   script:
-    - make debian
+    - make debian-nosudo
     - source venv_create.sh
     - workon abelujo
     - pip install -U pip
-    - make install
+    - make install-nosudo
