CI: no mkvirtualenv, just virtualenv and activate

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ install:
   #   - triggers
   script:
     - make debian-nosudo
-    - source venv_create.sh
-    - workon abelujo
+    - virtualenv .
+    - source bin/activate
     - echo "working on abelujo venv"
     - echo "upgranding pip"
     - pip install -U pip
