--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,10 @@ image: python:2.7
 
 before_script:
   - apt-get update  # for docker
+  - echo "pull and rebase repo"
+  - git pull --rebase
+  - echo "update submodules"
+  - git submodule update --remote
 
 install:
   # only:
