--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ image: python:2.7
 before_script:
   - apt-get update  # for docker
   - echo "pull and rebase repo"
-  - git pull --rebase
+  - git pull --rebase gitlab master
   - echo "update submodules"
   - git submodule update --remote
 
