--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,11 @@
 
 image: python:2.7
 
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 before_script:
   - apt-get update  # for docker
-  - echo "pull and rebase repo"
-  - git pull --rebase gitlab master
-  - echo "update submodules"
-  - git submodule update --remote
 
 install:
   # only:
