--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,11 @@
 {
     "globals": {
+        "this$": false,
         "angular": false
     },
-    "undef": true,
-    "unused": true
+    "undef": false,
+    "node": true,  // no need to tell to use strict mode, we are in modules.
+    "-W080": true, // not necessary to initialize a var to undefined: but we do for easier reading.
+    "-W030": true, // Expected an assignment or function call and instead saw an expression: because of livescript imports (and tricks at the beginning of each generated file).
+    "unused": false // too many unused var because of livescript
 }
