--- a/.pylintrc
+++ b/.pylintrc
@@ -16,4 +16,12 @@ output-format=parseable
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=C0301,C0103,C0326,C0111,R0903,W0110,W1202, W0141  # --, invalid name, bad whitespace, C0111 missing-docstring, R0903 too-few-public-methods, W0110 deprecated-lambda, W1202 logging-format-interpolation, W0141 about maps,
+
+disable=C0301,C0103,C0326,C0111,R0903,W0110,W1202,W0141,C1001
+# --, invalid name, bad whitespace,
+# C0111 missing-docstring
+# R0903 too-few-public-methods
+# W0110 deprecated-lambda
+# W1202 logging-format-interpolation
+# W0141 about maps
+# C1001 old style classes (even for class: Meta)
