--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,13 @@
         "angular-cookies": "1.3",
         "angular-bootstrap": "0.14.3",
         "angular-mocks": "latest",
-        "angular-resource": "latest",
-        "angular-route": "latest",
+        "angular-resource": "1.4.9",
+        "angular-route": "1.4.9",
         "angular-animate": "1.3",
-        "angular-sanitize": "latest",
+        "angular-sanitize": "1.4.9",
         "angular-i18n": "1.3",
         "angular-dynamic-locale": "0.1.32",
-        "angular-ui-router": "latest",
+        "angular-ui-router": "0.2.17",
         "angular-ui-select": "*",
         "bootstrap": "3.3",
         "bootstrap-tour": "0.11",
