--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,11 @@ image: python:2.7
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
+cache:
+  paths:
+  - node_modules/
+  - .yarn
+
 before_script:
   - apt-get update -qy  # for docker
 
