--- a/package.json
+++ b/package.json
@@ -4,7 +4,27 @@
     "description": "abelujo",
     "dependencies": {
         "angular": "1.3.20",
+        "angular-animate": "1.3",
+        "angular-cookies": "1.3",
+        "angular-datatables": "0.5",
+        "angular-dynamic-locale": "0.1.32",
+        "angular-hotkeys": "chieffancypants/angular-hotkeys#1.7.0",
+        "angular-i18n": "1.3",
+        "angular-loading-bar": "0.8",
+        "angular-mocks": "latest",
+        "angular-resource": "1.4.9",
+        "angular-route": "1.4.9",
+        "angular-sanitize": "1.4.9",
+        "angular-smart-table": "2.1",
+        "angular-ui-bootstrap": "0.14.3",
+        "angular-ui-router": "0.2.17",
+        "angular-ui-select": "*",
         "bootstrap": "^3.3.7",
+        "bootstrap-tour": "0.11",
+        "bower": "latest",
+        "c3": "latest",
+        "datatables": "1.10",
+        "datejs": "latest",
         "gulp": "latest",
         "gulp-bg": "latest",
         "gulp-clean-css": "latest",
@@ -17,28 +37,9 @@
         "http-server": "~0.6.1",
         "jquery": "~1.9",
         "livescript": "latest",
+        "prelude-ls": "1.1.2",
         "shelljs": "~0.2.6",
         "underscore": "^1.8.3",
-        "angular-cookies": "1.3",
-        "angular-bootstrap": "0.14.3",
-        "angular-mocks": "latest",
-        "angular-resource": "1.4.9",
-        "angular-route": "1.4.9",
-        "angular-animate": "1.3",
-        "angular-sanitize": "1.4.9",
-        "angular-i18n": "1.3",
-        "angular-dynamic-locale": "0.1.32",
-        "angular-ui-router": "0.2.17",
-        "angular-ui-select": "*",
-        "bootstrap-tour": "0.11",
-        "prelude-ls": "1.1.2",
-        "datejs": "latest",
-        "c3": "latest",
-        "angular-smart-table": "2.1",
-        "angular-loading-bar": "0.8",
-        "angular-datatables": "0.5",
-        "datatables": "1.10",
-        "angular-hotkeys": "chieffancypants/angular-hotkeys#1.7.0",
         "yargs": "1.2.1"
     },
     "devDependencies": {
@@ -46,6 +47,7 @@
     },
     "private": true,
     "scripts": {
+        "postinstall": "bower install",
         "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
     }
 }
