--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,10 @@
     "tests"
   ],
   "dependencies": {
-    "prelude-ls": "^1.1.2"
+    "prelude-ls": "^1.1.2",
+    "angular-i18n": "^1.6.4"
+  },
+  "resolutions": {
+    "angular-i18n": "1.3"
   }
 }
