install bootstrap with bower (for fonts)
with npm we need to configure somethings to get the fonts back.
with bower we get the glyphicons fonts.

for #62 - Remove Bower, replace by npm - broken installation

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
   ],
   "dependencies": {
     "prelude-ls": "^1.1.2",
-    "angular-i18n": "^1.6.4"
+    "angular-i18n": "^1.6.4",
+    "bootstrap": "^3.3.7"
   },
   "resolutions": {
     "angular-i18n": "1.3"
