--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     },
     "private": true,
     "scripts": {
-        "postinstall": "bower install",
+        "postinstall": "bower install --allow-root",
         "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
     }
 }
