--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "prelude-ls": "^1.1.2",
     "angular-i18n": "^1.6.4",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "datejs": "latest"
   },
   "resolutions": {
     "angular-i18n": "1.3"
