--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -58,3 +58,5 @@ html5lib==1.0b8         # for "cannot import viewkeys" runtime error.
 
 pendulum==1.1           # easy timezone, diffs, human info, etc
 raven                   # sentry
+
+ruamel.yaml             # to remove the yaml.load unsafe warning (of third party libs).
