--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "angular-ui-bootstrap": "0.14.3",
         "angular-ui-router": "0.2.17",
         "angular-ui-select": "*",
+        "babel-brunch": "^6.1.1",
+        "babel-eslint": "^8.0.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-es2015": "^6.24.1",
         "bootstrap": "^3.3.7",
         "bootstrap-tour": "0.11",
         "bower": "latest",
@@ -39,10 +43,15 @@
         "prelude-ls": "1.1.2",
         "shelljs": "~0.2.6",
         "underscore": "^1.8.3",
+        "vue": "^2.5.2",
         "yargs": "1.2.1"
     },
     "devDependencies": {
-        "testcafe": "latest"
+        "brunch": "^2.10.12",
+        "javascript-brunch": "^2.10.0",
+        "pug-brunch": "^1.0.2",
+        "testcafe": "latest",
+        "vue-brunch": "^2.0.1"
     },
     "private": true,
     "scripts": {
