npm add vue-resource

--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
         "bootstrap-tour": "0.11",
         "bower": "latest",
         "brunch": "^2.10.12",
-        "javascript-brunch": "^2.10.0",
-        "vue-brunch": "^2.0.1",
         "c3": "latest",
         "datatables": "1.10",
         "gulp": "latest",
@@ -41,12 +39,15 @@
         "gulp-uglify": "~0.2.1",
         "gulp-util": "~3.0",
         "http-server": "~0.6.1",
+        "javascript-brunch": "^2.10.0",
         "jquery": "~1.9",
         "livescript": "latest",
         "prelude-ls": "1.1.2",
         "shelljs": "~0.2.6",
         "underscore": "^1.8.3",
         "vue": "^2.5.2",
+        "vue-brunch": "^2.0.1",
+        "vue-resource": "^1.3.4",
         "yargs": "1.2.1"
     },
     "devDependencies": {
