--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
         "underscore": "^1.8.3",
         "vue": "^2.5.2",
         "vue-brunch": "^2.0.1",
+        "vue-progressbar": "^0.7.3",
         "vue-resource": "^1.3.4",
+        "vue-resource-progressbar-interceptor": "^1.1.9",
         "yargs": "1.2.1"
     },
     "devDependencies": {
