--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -14,9 +14,9 @@
 # You should have received a copy of the GNU General Public License
 # along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 django==1.8
-django-bootstrap3
+django-bootstrap3==6.2.2
 pyjade                  # process jade templates.
-bootstrap-admin         # bootstrap theme, nice search feature.
+bootstrap-admin==0.3.6  # bootstrap theme, nice search feature.
 pyyaml
 psycopg2                # postgresql database engine.
 pytz			# timezone
