--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -13,6 +13,9 @@
 
 # You should have received a copy of the GNU General Public License
 # along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
+
+pip==9
+
 django==1.8
 django-bootstrap3==6.2.2
 pyjade                  # process jade templates.
