pin setuptools 39.2 hopefully removing "check_specifier" install error

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -15,6 +15,7 @@
 # along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 
 pip==9
+setuptools==39.2
 
 django==1.8
 django-bootstrap3==6.2.2
