--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,3 @@
 [flake8]
 ignore = E124,E126,E127,E128,E129,E251,E265,E302,W391,E501,C901,E731
+exclude = build,dist,migrations,datasources,views_utils.py
